--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!Doctype html>
-<html>
+<html lang="fr">
   <head>
+    <meta charset="utf-8">
+    <link type="text/css" href="index.css" rel="stylesheet">
     <title>EclairSideral Gaming</title>
   </head>
   <body>
-    <h1>EclairSideral Gaming</h1>
-    <p>Test de GitHub pages</p>
+    <header>
+      <h1>EclairSideral Gaming Hub</h1>
+    </header>
+
+    <div class="contenue">
+      
+    </div>
+
+    <footer>
+      
+    </footer>
   </body>
 </html>
