--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <body>
     <header>
       <h1>EclairSideral Gaming Hub</h1>
+      <div class="menu">
+        <a href="index.html">Accueil</a>
+        <a href="compte.html">Compte</a>
+      </div>
     </header>
 
     <div class="contenue">
-      
+      <p>Page en cours de développement</p>
     </div>
 
     <footer>
-      
+      <p>Développé par Eclair_de_feu&copy</p>
     </footer>
   </body>
 </html>
