--- a/compte.html
+++ b/compte.html
@@ -10,6 +10,7 @@
       <h1>EclairSideral Gaming Account</h1>
       <div class="menu">
         <a href="index.html">Accueil</a>
+        <a href="boutique.html">Boutique</a>
         <a href="compte.html">Compte</a>
       </div>
     </header>
