--- a/compte.html
+++ b/compte.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link type="text/css" href="index.css" rel="stylesheet">
+    <link type="text/css" href="compte.css" rel="stylesheet">
     <title>EclairSideral Gaming</title>
   </head>
   <body>
@@ -16,7 +17,15 @@
     </header>
 
     <div class="contenue">
-      <p>Page en cours de développement</p>
+      <div class="connection">
+        <h2>Se connecter</h2>
+        <h3>Cliquez pour se connecter</h3>
+      </div>
+      
+      <div class="creation">
+        <h2>Creer un compte</h2>
+        <h3>Cliquez pour créer un compte</h3>
+      </div>
     </div>
 
     <footer>
