--- a/compte.html
+++ b/compte.html
@@ -17,15 +17,19 @@
     </header>
 
     <div class="contenue">
-      <div class="connection">
-        <h2>Se connecter</h2>
-        <h3>Cliquez pour se connecter</h3>
-      </div>
-      
-      <div class="creation">
-        <h2>Creer un compte</h2>
-        <h3>Cliquez pour créer un compte</h3>
-      </div>
+      <a href="connexion.html">
+        <div class="connection">
+          <h2>Se connecter</h2>
+          <h3>Cliquez pour se connecter</h3>
+        </div>
+      </a>
+
+      <a href="creation.html">
+        <div class="creation">
+          <h2>Creer un compte</h2>
+          <h3>Cliquez pour créer un compte</h3>
+        </div>
+      </a>
     </div>
 
     <footer>
