--- a/connexion.html
+++ b/connexion.html
@@ -1,1 +1,27 @@
 
+<!Doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <link type="text/css" href="index.css" rel="stylesheet">
+    <title>EclairSideral Gaming</title>
+  </head>
+  <body>
+    <header>
+      <h1>EclairSideral Gaming Account</h1>
+      <div class="menu">
+        <a href="index.html">Accueil</a>
+        <a href="boutique.html">Boutique</a>
+        <a href="compte.html">Compte</a>
+      </div>
+    </header>
+
+    <div class="contenue">
+      
+    </div>
+
+    <footer>
+      <p>Développé par Eclair_de_feu&copy</p>
+    </footer>
+  </body>
+</html>
