--- a/compte.html
+++ b/compte.html
@@ -17,18 +17,14 @@
     </header>
 
     <div class="contenue">
-      <a href="connexion.html">
-        <div class="connection">
-          <h2>Se connecter</h2>
-          <h3>Cliquez pour se connecter</h3>
-        </div>
+      <a href="connexion.html" class="connection">
+        <h2>Se connecter</h2>
+        <h3>Cliquez pour se connecter</h3>
       </a>
 
-      <a href="creation.html">
-        <div class="creation">
-          <h2>Creer un compte</h2>
-          <h3>Cliquez pour créer un compte</h3>
-        </div>
+      <a href="creation.html" class="creation">
+        <h2>Creer un compte</h2>
+        <h3>Cliquez pour créer un compte</h3>
       </a>
     </div>
 
