--- a/boutique.html
+++ b/boutique.html
@@ -16,7 +16,12 @@
     </header>
 
     <div class="contenue">
-      <p>Page en cours de développement</p>
+      <div class="article">
+        <h2>Article1</h2>
+        <img src="logo.png" alt="Image de l'article">
+        <p>Description</p>
+        <p>Prix</p>
+      </div>
     </div>
 
     <footer>
