--- a/boutique.html
+++ b/boutique.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link type="text/css" href="index.css" rel="stylesheet">
+    <link type="text/css" href="boutique.css" rel="stylesheet">
     <title>EclairSideral Gaming</title>
   </head>
   <body>
