--- a/boutique.html
+++ b/boutique.html
@@ -19,7 +19,7 @@
     <div class="contenue">
       <div class="article">
         <h2>Article1</h2>
-        <img src="logo.png" alt="Image de l'article" width="24%" heigth="25%">
+        <img src="logo.png" alt="Image de l'article" width="24%" heigth="10px">
         <p>Description</p>
         <p>Prix</p>
       </div>
