--- a/boutique.html
+++ b/boutique.html
@@ -20,7 +20,7 @@
     <div class="contenue">
       <div class="article">
         <h2>Article1</h2>
-        <img src="logo.png" alt="Image de l'article" width="24%" heigth="10px">
+        <img src="logo.png" alt="Image de l'article" width="15px" heigth="5px">
         <p>Description</p>
         <p>Prix</p>
       </div>
