--- a/compte.html
+++ b/compte.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="logo.png">
     <link type="text/css" href="index.css" rel="stylesheet">
     <link type="text/css" href="compte.css" rel="stylesheet">
     <title>EclairSideral Gaming</title>
