--- a/boutique.html
+++ b/boutique.html
@@ -20,7 +20,28 @@
     <div class="contenue">
       <div class="article">
         <h2>Article1</h2>
-        <img src="logo.png" alt="Image de l'article" width="15px" heigth="15px">
+        <img src="logo.png" alt="Image de l'article" width="25px" heigth="25px">
+        <p>Description</p>
+        <p>Prix</p>
+      </div>
+
+      <div class="article">
+        <h2>Article1</h2>
+        <img src="logo.png" alt="Image de l'article" width="25px" heigth="25px">
+        <p>Description</p>
+        <p>Prix</p>
+      </div>
+
+      <div class="article">
+        <h2>Article1</h2>
+        <img src="logo.png" alt="Image de l'article" width="25px" heigth="25px">
+        <p>Description</p>
+        <p>Prix</p>
+      </div>
+
+      <div class="article">
+        <h2>Article1</h2>
+        <img src="logo.png" alt="Image de l'article" width="25px" heigth="25px">
         <p>Description</p>
         <p>Prix</p>
       </div>
