--- a/boutique.html
+++ b/boutique.html
@@ -45,6 +45,13 @@
         <p>Description</p>
         <p>Prix</p>
       </div>
+
+      <div class="article">
+        <h2>Article1</h2>
+        <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
+        <p>Description</p>
+        <p>Prix</p>
+      </div>
     </div>
 
     <footer>
