--- a/boutique.html
+++ b/boutique.html
@@ -46,7 +46,7 @@
         <p>Prix</p>
       </div>
 
-      <div class="article">
+      <div class="article-vip">
         <h2>Article1</h2>
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
