--- a/boutique.html
+++ b/boutique.html
@@ -23,6 +23,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
+        <button id="indispo">Acheter</button>
       </div>
 
       <div class="article">
@@ -30,6 +31,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
+        <button id="indispo">Acheter</button>
       </div>
 
       <div class="article">
@@ -37,6 +39,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
+        <button id="indispo">Acheter</button>
       </div>
 
       <div class="article">
@@ -44,6 +47,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
+        <button id="indispo">Acheter</button>
       </div>
 
       <div class="article-vip">
@@ -51,6 +55,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
+        <button id="dispo" href="Article">Acheter</button>
       </div>
     </div>
 
