--- a/boutique.html
+++ b/boutique.html
@@ -55,7 +55,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
-        <button id="dispo" href="article1.html">Acheter</button>
+        <button id="dispo" onclick="window.location.href = 'article1.html';">Acheter</button>
       </div>
     </div>
 
