--- a/article1.html
+++ b/article1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="logo.png">
     <link type="text/css" href="index.css" rel="stylesheet">
+    <link type="text/css" href="article.css" rel="stylesheet">
     <title>EclairSideral Gaming</title>
   </head>
   <body>
