--- a/boutique.html
+++ b/boutique.html
@@ -23,7 +23,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
-        <button id="indispo">Acheter</button>
+        <a id="indispo">Acheter</a>
       </div>
 
       <div class="article">
@@ -31,7 +31,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
-        <button id="indispo">Acheter</button>
+        <a id="indispo">Acheter</a>
       </div>
 
       <div class="article">
@@ -39,7 +39,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
-        <button id="indispo">Acheter</button>
+        <a id="indispo">Acheter</a>
       </div>
 
       <div class="article">
@@ -47,7 +47,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
-        <button id="indispo">Acheter</button>
+        <a id="indispo">Acheter</a>
       </div>
 
       <div class="article-vip">
@@ -55,7 +55,7 @@
         <img src="logo.png" alt="Image de l'article" width="100px" heigth="100px">
         <p>Description</p>
         <p>Prix</p>
-        <button id="dispo" onclick="window.location.href = 'article1.html';">Acheter</button>
+        <a id="dispo" href="article1.html">Acheter</a>
       </div>
     </div>
 
